--- a/style.css
+++ b/style.css
@@ -23,28 +23,36 @@ h1{
 	margin: 0;
 }
 .main-content{
-	height: 100%; 
+	min-height: 100%;
 	margin:0 auto;
 	padding: 0 20px;
 	width: 1280px;
 }
+.header-section{float:left;}
 .page-title{
 	margin:0;
+	text-align:center;
 	padding: 0;
 }
 .header{
+	max-width:1280px;
+	margin:0 auto;
+	height:180px;
 	background: rgba(48, 48, 48, 0.75);
 	text-align: center;
 }
 .header-left{
+	width:40%;
 	color: #d4d4d4;
 	display: inline-block;
 }
 .header-center{
+	width:20%;
 	color: #d4d4d4;
 	display: inline-block;
 }
 .header-right{
+	width:40%;
 	color: #d4d4d4;
 	display: inline-block;
 }
@@ -54,3 +62,14 @@ h1{
 	width: 100%;
 	text-align: center;
 }
+.youtube-embed{
+	text-align:center;
+}
+.content{
+	background: rgba(0, 0, 0, 0.4);
+}
+.content h2{
+	text-align:center;
+	text-decoration:underline;
+}
+.list{color:white;list-style:none;text-align:center;padding:0;}
