--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,9 @@ body{
     background-color:#000000;
     color:white;
     font-family: 'Anton',sans-serif;
+    font-weight:500;
     margin:0;
+    text-transform:uppercase;
 }
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
@@ -24,11 +26,27 @@ a:visited{
     margin:10px 0;
     padding:15px 0;
 }
+ul{
+    margin:0;
+    padding:0;
+    list-style:none;
+}
+ul li{
+    float:left;
+}
+.two-column-left.left{
+    float:left;
+    width:62%;
+}
+.two-column-left.right{
+    float:right;
+    width:32%;
+}
 /** Header CSS **/
 .social-icon{
     width:32px;
 }
-.header{
+.header, .footer{
     width:100%;
 }
 .header:after, .header-wrapper:after {
@@ -39,7 +57,7 @@ a:visited{
 .header:after{
     clear:both;
 }
-.header-wrapper{
+.header-wrapper, .footer-wrapper{
     border-bottom:1px solid #FF0000;
     max-width:1300px;
     margin:0 auto;
@@ -84,16 +102,12 @@ a:visited{
 .nav{
     width:100%;
     float:left;
-    padding-top:10px;
-    border-top:1px solid red;
-}
-.nav-links{
-    list-style-type:none;
-    margin:0;
-    padding:0;
+    padding:10px 0 10px 0;
+    border-bottom:1px solid red;
+    z-index:5;
+    background:black;
 }
 .header-parent{
-    float:left;
     text-align:center;
 }
 .header-parent a{
@@ -104,6 +118,44 @@ a:visited{
     color:red;
 }
 
+.nav.sticky {
+    width:auto;
+    position: fixed;
+}
+
 /** Footer CSS **/
+.footer-menu{
+    float:left;
+}
+.footer{
+    font-size:14px;
+    background-color: #2d2d2d;
+    padding:5px 0;
+    position:fixed;
+    bottom:0;
+    border-top:1px solid red;
+}
+.footer-wrapper{
+    border-bottom:none;
+}
+.copyright{
+    float:right;
+    width:220px;
+}
+.copyright span{
+    font-weight:400;
+}
+.footer-menu-item{
+    padding: 0 15px;
+}
+.footer-menu-item a{
+    color:white;
+}
+.footer-menu-item a:hover{
+    text-decoration:underline;
+}
 
-
+/** PAge Structures **/
+.content{
+    width:100%;
+}
