--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,7 @@
         display:none;
     }
     #main-logo{
-        max-width:150px;
+        max-width:130px;
     }
     .header-section{
         margin:10px;
@@ -18,6 +18,26 @@
         width:40%;
     }
     .header-right{
-        width:50%;
+        width:48%;
+    }
+    .nav.sticky {
+        width:100%;
+    }
+    .copyright, .footer-menu{
+        text-align:center;
+        width:100%;
+    }
+    .footer-menu-item{
+        float:none;
+        padding:5px 0;
+        width:100%;
+    }
+    .copyright{
+        padding:5px 0;
+    }
+    .two-column-left.left, .two-column-left.right{
+        width:100%;
+        float:none;
+        text-align:center;
     }
 }
