--- a/css/custom.css
+++ b/css/custom.css
@@ -2,13 +2,16 @@
 body{
     background-color:#000000;
     color:white;
-    font-family: 'Anton',sans-serif;
+    font-family: 'Krona One', sans-serif;
     font-weight:500;
     margin:0;
     text-transform:uppercase;
 }
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
+}
+h3 {
+	font-size: .9em;
 }
 a{
     text-decoration:none;
@@ -46,14 +49,28 @@ ul li{
     min-width:100%;
     min-height:100%;
     width:100%;
-    z-index:1;
     background-image: url('../media/images/main-bg.jpg');
     position:absolute;
     background-size:cover;
     background-position:center center;
 }
+.fight-companion-home .page-title{
+	display:none;
+}
+label {
+	margin-right: 10px;
+}
 
+input {
+	background-color: #2b170e;
+    padding: 5px;
+    border-radius: 5px;
+}
 
+#form_button input {
+	background-color: #2b170e;
+    color: white;
+}
 
 /** Header CSS **/
 .social-icon{
@@ -61,6 +78,9 @@ ul li{
 }
 .header, .footer{
     width:100%;
+}
+.footer{
+    background-color: rgba(0, 0, 0, .65);
 }
 .header:after, .header-wrapper:after {
     content: "";
@@ -71,10 +91,10 @@ ul li{
     clear:both;
 }
 .header-wrapper, .footer-wrapper{
-    border-bottom:1px solid #FF0000;
+    /*border-bottom:1px solid #FF0000;*/
     max-width:1300px;
     margin:0 auto;
-    padding-bottom:10px;
+    padding: 5px 0 10px;
 }
 .header-upper{
     height:32px;
@@ -99,7 +119,7 @@ ul li{
     float:left;
 }
 #main-logo{
-    max-width:200px;
+    max-width:120px;
 }
 .header-lower:after{
     clear:both;
@@ -111,24 +131,35 @@ ul li{
 .main-wrapper{
     max-width:1300px;
     margin:0 auto;
+	background-color: rgba(0, 0, 0, 0.4);
+	padding: 0 15px 15px;
+	border-radius: 15px;
 }
 .nav-wrapper{
     width:100%;
+	background-color: rgba(0, 0, 0, .65);
+	border-bottom: 2px solid red;
 }
 .nav{
     position:relative;
     margin:0 auto;
     max-width:1300px;
-    padding:10px 0 10px 0;
-    border-bottom:1px solid red;
+    padding:10px 0 25px 0;
+    /*border-bottom:1px solid red;*/
     z-index:5;
+}
+.nav-links{
+    text-align:center;
+}
+.nav-links li:nth-child(3){
+    margin-top:-12px;
 }
 .header-parent{
     text-align:center;
 }
 .header-parent a{
     font-weight:600;
-    color:white;
+    color: #d4d4d4;
 }
 .header-parent a:hover{
     color:red;
@@ -144,12 +175,11 @@ ul li{
     float:left;
 }
 .footer{
-    font-size:14px;
-    background-color: #2d2d2d;
-    padding:5px 0;
+    font-size:.6em;
+    padding:10px 0;
     position:fixed;
     bottom:0;
-    border-top:1px solid red;
+    border-top:2px solid red;
 }
 .footer-wrapper{
     border-bottom:none;
