--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,14 @@
 /* Responsive Styling Above Mobile */
 @media only screen and (min-width:769px){
-
+    .mobile-nav{
+        display:none;
+    }
+    .nav-wrapper{
+        border-bottom:1px solid red;
+    }
+    #mobile-text{
+        display:none;
+    }
 }
 /* Responsive Styling Mobile */
 @media only screen and (max-width:768px){
@@ -9,6 +17,9 @@
     }
     #main-logo{
         max-width:130px;
+    }
+    .mobile-logo{
+        text-align:center;
     }
     .header-section{
         margin:10px;
@@ -20,8 +31,93 @@
     .header-right{
         width:48%;
     }
+    .mobile-nav{
+        display:block;
+    }
+    .nav{
+        display:none;
+    }
     .nav.sticky {
         width:100%;
+    }
+    .nav-wrapper{
+        background:none;
+    }
+    .mobile-nav{
+        position:relative;
+        display:inline-block;
+        width:100%;
+    }
+    .mobile-nav ul.active{
+        display:none;
+    }
+    .mobile-nav ul{
+        width:120px;
+        position:absolute;
+        top:65%;
+        left:0px;
+        padding:10px 18px;
+        box-shadow:0px 1px 1px rgba(0,0,0,0.15);
+        border-radius:3px;
+        background: #303030;
+        z-index:1;
+    }
+    .mobile-nav ul:after {
+        width:0px;
+        height:0px;
+        position:absolute;
+        top:0%;
+        left:17px;
+        content:'';
+        transform:translate(0%, -100%);
+        border-left:7px solid transparent;
+        border-right:7px solid transparent;
+        border-bottom:7px solid #303030;
+    }
+    .mobile-nav li{
+        margin:5px 0px 5px 0px;
+        float:none;
+        display:block;
+    }
+    .mobile-nav a {
+        display:block;
+    }
+    .mobile-nav-links a{
+        color:white;
+    }
+    .mobile-nav-links a:hover{
+        color:red;
+    }
+    .mobile-nav-links a:visited{
+        color:white;
+    }
+    #mobile-text{
+        text-align: center;
+        background-color: rgba(0, 0, 0, .65);
+        border-bottom: 1px solid red;
+        padding:5px 0;
+    }
+    #mobile-text h3{
+        margin:0;
+    }
+    .toggle-nav {
+        padding:10px;
+        float:left;
+        display:inline-block;
+        color:white;
+        font-size:30px;
+        line-height:30px;
+        transition:color linear 0.15s;
+        position:absolute;
+        top:40px;
+    }
+    .toggle-nav:visited{
+        color:white;
+    }
+
+    .toggle-nav.active {
+        text-decoration:none;
+        color:red;
     }
     .copyright, .footer-menu{
         text-align:center;
