--- a/css/custom.css
+++ b/css/custom.css
@@ -150,11 +150,11 @@ textarea:focus, input:focus {
     text-align:center;
 }
 .panel-heading{
-    margin-bottom:10px;
+    margin-bottom:20px;
 }
 .panel-title{
     font-size:20px;
-    margin-bottom:5px;
+    margin-bottom:10px;
 }
 .panel-subtitle{
     text-transform:lowercase;
@@ -242,6 +242,15 @@ body #simplemodal-container .simplemodal-data{
 .footer-menu{
     float:left;
 }
+.footer-left{
+    text-align: left;
+}
+.footer-right{
+    text-align:right;
+}
+.footer-center{
+    text-align:center;
+}
 .footer{
     font-size:.6em;
     padding:10px 0;
@@ -310,4 +319,27 @@ body #simplemodal-container .simplemodal-data{
     color:red;
     padding-bottom:5px;
     padding-top:5px;
+}
+ul.social-links-list li{
+    display:inline-block;
+}
+ul.social-links-list li{
+    float:none;
+}
+.about-center{
+    text-align:center;
+}
+#about-logo{
+    max-width:250px;
+}
+.about-personal{
+    width:100%;
+    text-align:center;
+}
+.bio-content{
+    text-align:center;
+    padding:10px;
+}
+.about-items li{
+    float:none;
 }
