--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,9 +33,33 @@
         width:330px;
         margin:0 auto;
     }
+    .footer-left{
+        width:31%;
+        float:left;
+        padding:10px;
+    }
+    .footer-right{
+        width:29%;
+        float:right;
+        padding:10px;
+    }
+    .footer-center{
+        display:inline-block;
+        width:35%;
+    }
+    .about-items{
+        width:70%;
+        margin:0 auto;
+    }
+    .main-wrapper{
+        margin-bottom: 100px;
+    }
 }
 /* Responsive Styling Mobile */
 @media only screen and (max-width:768px){
+    .main-wrapper{
+        margin-bottom: 25%;
+    }
     .header-left{
         display:none;
     }
@@ -172,6 +196,7 @@
     body.simplemodal-container{
         padding:0;
     }
-
-
+    .panel{
+        padding:0 10px;
+    }
 }
