--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,6 +54,13 @@
     .main-wrapper{
         margin-bottom: 100px;
     }
+    .fight-list{
+        width:45%;
+        display:inline-block;
+    }
+    .fight-list.undercard{
+        float:right;
+    }
 }
 /* Responsive Styling Mobile */
 @media only screen and (max-width:768px){
