--- a/css/custom.css
+++ b/css/custom.css
@@ -378,3 +378,18 @@ ul.social-links-list li{
 .fight-listing li:nth-child(even){
     background:gray;
 }
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
