--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,9 @@ body{
     margin:0;
     text-transform:uppercase;
 }
+body .std{
+    font-family: 'Cinzel', serif;
+}
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
 }
@@ -162,6 +165,50 @@ textarea:focus, input:focus {
     font-weight:300;
     font-size:14px;
 }
+.handle{
+    background:black;
+    color:white;
+    padding:5px;
+    border:2px solid red;
+}
+.rankings h3{
+    text-align: center;
+    margin:0;
+    font-size:20px;
+}
+.rankings p{
+    border-top:1px solid red;
+    border-bottom:1px solid red;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:10px 0;
+    text-align:center;
+}
+.rankings-table, .fight-list-table{
+    width:100%;
+    text-align:center;
+}
+.rankings-table table, .rankings-table th, .rankings-table td {
+    border: 1px solid lightgray;
+    padding:5px;
+}
+.fight-predictions{
+    width:100%;
+    text-align:center;
+}
+.fight-predictions h3{
+    font-size:22px;
+    margin-bottom:5px;
+}
+.fight-predictions ul{
+    margin-bottom:10px;
+}
+.fight-predictions li:first-child{
+    font-size:18px;
+}
+.fight-predictions li{
+    float:none;
+}
 body #simplemodal-container{
     color:white;
     background-color: black;
@@ -262,7 +309,6 @@ body #simplemodal-container .simplemodal-data{
 .footer{
     font-size:.6em;
     padding:10px 0;
-    position:fixed;
     bottom:0;
     border-top:2px solid red;
 }
@@ -355,10 +401,12 @@ ul.social-links-list li{
     text-align:center;
 }
 .fight-list h3{
-    font-size:20px;
+    font-size:22px;
 }
 .fight-card{
     margin-bottom:30px;
+    float:left;
+    width:100%;
 }
 #fight-headline{
     font-size:30px;
