--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,6 +33,9 @@
         width:330px;
         margin:0 auto;
     }
+    .footer{
+        position:fixed;
+    }
     .footer-left{
         width:31%;
         float:left;
@@ -177,6 +180,9 @@
     .copyright, .footer-menu{
         text-align:center;
         width:100%;
+    }
+    .footer{
+        position:relative;
     }
     .footer-menu-item{
         float:none;
