--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,9 @@ body{
     margin:0;
     text-transform:uppercase;
 }
+body .std{
+    font-family: 'Cabin', serif;
+}
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
 }
@@ -51,7 +54,8 @@ ul li{
     width:100%;
     background-image: url('../media/images/main-bg.jpg');
     position:absolute;
-    background-size:cover;
+    background-size:100%;
+    background-attachment:fixed;
     background-position:center center;
 }
 .fight-companion-home .page-title{
@@ -161,6 +165,56 @@ textarea:focus, input:focus {
     font-weight:300;
     font-size:14px;
 }
+.handle{
+    background:black;
+    color:white;
+    padding:5px;
+    border:2px solid red;
+}
+.rankings h3{
+    text-align: center;
+    margin:0;
+    font-size:20px;
+}
+.rankings p{
+    border-top:1px solid red;
+    border-bottom:1px solid red;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:10px 0;
+    text-align:center;
+}
+.rankings-table, .fight-list-table{
+    width:100%;
+    text-align:center;
+}
+.rankings-table table, .rankings-table th, .rankings-table td {
+    border: 1px solid lightgray;
+    padding:5px;
+}
+.fight-predictions{
+    width: 45%;
+    margin: 0 auto;
+    text-align:center;
+}
+.fight-predictions h3{
+    font-size:22px;
+    background-color: #808080;
+    margin-bottom: 0;
+    padding: 10px;
+}
+.fight-predictions ul{
+    margin-bottom:10px;
+}
+.fight-predictions li:first-child{
+    font-size:18px;
+}
+.fight-predictions li{
+    float:none;
+}
+.panel-gif{
+	margin-top: 15px;
+}
 body #simplemodal-container{
     color:white;
     background-color: black;
@@ -261,7 +315,6 @@ body #simplemodal-container .simplemodal-data{
 .footer{
     font-size:.6em;
     padding:10px 0;
-    position:fixed;
     bottom:0;
     border-top:2px solid red;
 }
@@ -354,10 +407,26 @@ ul.social-links-list li{
     text-align:center;
 }
 .fight-list h3{
-    font-size:20px;
+    font-size:22px;
+    background-color: red;
+    padding: 10px;
+    margin-bottom: initial;
 }
 .fight-card{
     margin-bottom:30px;
+    float:left;
+    width:100%;
+}
+.fight-red{
+	background-color: red;
+	padding: 5px;
+}.fight-black{
+	background-color: #000000;
+	padding: 2px;
+}
+.fight-grey{
+	background-color: #808080;
+	padding: 2px;
 }
 #fight-headline{
     font-size:30px;
@@ -377,4 +446,19 @@ ul.social-links-list li{
 }
 .fight-listing li:nth-child(even){
     background:gray;
+}
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe, 
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
